// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`<AccountsCard /> > it renders an AccountsCard component with title as expected 1`] = `
<body>
  <div>
    <div
      class="pos_relative trs_all_0.3s_ease-in-out bd_1px_solid bd-c_border bdr_lg bg-c_card c_card.foreground p_5 d_flex flex-d_column [&:hover]:bx-sh_0_10px_20px_rgba(0,_0,_0,_0.15)! [&:hover]:trf_translate3d(-2px,_-4px,_0) h_325px w_250px d_flex flex-d_column jc_space-between"
      id="123456"
    >
      <div
        class="d_flex flex-d_column gap_4px cursor_pointer"
      >
        <h5
          class="c_gray.500 fs_0.75rem fw_bold lh_tight m_0 "
        >
          Current account
        </h5>
        <h4
          class="c_primary fs_1.25rem fw_bold lh_tight m_0 "
        >
          My curent account
        </h4>
      </div>
      <div
        class="flex_1 d_flex flex-d_column jc_flex-end cursor_pointer mt_16px mb_16px"
      >
        <div
          class="d_flex flex-d_row ai_center jc_space-between mb_12px"
        >
          <div
            class="d_flex flex-d_column"
          >
            <span
              class="fs_10px tt_uppercase c_text.muted"
            >
              previous:
            </span>
            <span
              class="fs_md fw_bold c_text.primary"
            >
              £11,000
            </span>
            <span
              class="fs_10px fw_semibold c_emerald.500 mt_2px"
            >
              10
              %
            </span>
          </div>
          <div
            class="d_flex flex-d_column"
          >
            <span
              class="fs_10px tt_uppercase c_text.muted"
            >
              current:
            </span>
            <span
              class="fs_md fw_bold c_text.primary"
            >
              £12,000
            </span>
            <span
              class="fs_10px fw_semibold c_emerald.500 mt_2px"
            >
              9
              %
            </span>
          </div>
        </div>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 95%; min-width: 0;"
        >
          <div
            style="width: 0px; height: 0px; overflow: visible;"
          />
        </div>
      </div>
      <div
        class="d_flex jc_flex-end"
      >
        <div
          class="d_flex flex-d_row ai_center gap_4 "
        >
          <button
            class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_4 py_2 fs_xs lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
          >
            view
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="dialog"
            class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_4 py_2 fs_xs lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
            data-state="closed"
            type="button"
          >
            edit
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;

exports[`<AccountsCard with increasing values > should match snapshot for account with increasing values 1`] = `
<body>
  <div>
    <div
      class="pos_relative trs_all_0.3s_ease-in-out bd_1px_solid bd-c_border bdr_lg bg-c_card c_card.foreground p_5 d_flex flex-d_column [&:hover]:bx-sh_0_10px_20px_rgba(0,_0,_0,_0.15)! [&:hover]:trf_translate3d(-2px,_-4px,_0) h_325px w_250px d_flex flex-d_column jc_space-between"
      id="123456"
    >
      <div
        class="d_flex flex-d_column gap_4px cursor_pointer"
      >
        <h5
          class="c_gray.500 fs_0.75rem fw_bold lh_tight m_0 "
        >
          Current account
        </h5>
        <h4
          class="c_primary fs_1.25rem fw_bold lh_tight m_0 "
        >
          My curent account
        </h4>
      </div>
      <div
        class="flex_1 d_flex flex-d_column jc_flex-end cursor_pointer mt_16px mb_16px"
      >
        <div
          class="d_flex flex-d_row ai_center jc_space-between mb_12px"
        >
          <div
            class="d_flex flex-d_column"
          >
            <span
              class="fs_10px tt_uppercase c_text.muted"
            >
              previous:
            </span>
            <span
              class="fs_md fw_bold c_text.primary"
            >
              £10,000
            </span>
            <span
              class="fs_10px fw_semibold c_destructive mt_2px"
            >
              -29
              %
            </span>
          </div>
          <div
            class="d_flex flex-d_column"
          >
            <span
              class="fs_10px tt_uppercase c_text.muted"
            >
              current:
            </span>
            <span
              class="fs_md fw_bold c_text.primary"
            >
              £9,000
            </span>
            <span
              class="fs_10px fw_semibold c_destructive mt_2px"
            >
              -10
              %
            </span>
          </div>
        </div>
        <div
          class="recharts-responsive-container"
          style="width: 100%; height: 95%; min-width: 0;"
        >
          <div
            style="width: 0px; height: 0px; overflow: visible;"
          />
        </div>
      </div>
      <div
        class="d_flex jc_flex-end"
      >
        <div
          class="d_flex flex-d_row ai_center gap_4 "
        >
          <button
            class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_4 py_2 fs_xs lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
          >
            view
          </button>
          <button
            aria-expanded="false"
            aria-haspopup="dialog"
            class="d_inline-flex ai_center jc_center bdr_full fw_medium trs_all_0.2s cursor_pointer px_4 py_2 fs_xs lh_1 disabled:op_0.5 disabled:cursor_not-allowed focusVisible:ring_2px_solid focusVisible:ring-c_primary focusVisible:ring-o_2px bg_background c_text.primary bd_1px_solid bd-c_border hover:bg_accent hover:c_accent.foreground"
            data-state="closed"
            type="button"
          >
            edit
          </button>
        </div>
      </div>
    </div>
  </div>
</body>
`;
